[gd_scene load_steps=4 format=3 uid="uid://cnfuoyynimiuk"]

[ext_resource type="Script" path="res://Scripts/UI folder/PauseMenu.gd" id="1_r6rdq"]
[ext_resource type="Shader" path="res://Scenes/UI/OldBlurEffect.gdshader" id="2_wgckk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nvnb"]
shader = ExtResource("2_wgckk")
shader_parameter/amount = 2.5

[node name="Pause Menu" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6rdq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Blur effect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_3nvnb")
anchors_preset = -1
anchor_right = 0.999479
anchor_bottom = 0.993519
metadata/_edit_use_anchors_ = true

[node name="Pause menu landing" type="MarginContainer" parent="CanvasLayer"]
offset_left = 795.0
offset_top = 350.0
offset_right = 1131.0
offset_bottom = 594.0
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Pause menu landing"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause menu landing/PanelContainer"]
layout_mode = 2
mouse_filter = 0

[node name="Continue button" type="Button" parent="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="Stats button" type="Button" parent="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Stats"

[node name="Quit button" type="Button" parent="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer/Continue button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer/Stats button" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause menu landing/PanelContainer/VBoxContainer/Quit button" to="." method="_on_quit_button_pressed"]
